syntax="proto3";
package bootstrap;

// bootstrap broker
service BootstrapBroker{

  // return seed node list
  rpc GetSeedNodeList(Node) returns (SeedNodeList) {}

  // delete node info.
  rpc DeleteSeedNode(Node) returns (Reply) {}

}

message Node {
  string nodeId = 1;
  string address = 2;
  int32 port = 3;
  int32 slPortNum = 4;
  repeated string syncInterestList = 5;
  string metadata = 6;
}

message SeedNodeList {
  repeated Node nodes = 1;
}

message Reply {
  bool status = 1;
  string message = 2;
}

message Null {
}
